# Boterino

./: .gitignore  CMakeLists.txt
libs/: CMakeLists.txt
src/: BotToken.cpp  BotToken.h  CMakeLists.txt  main.cpp
